# BESSER-Bot-Framework

./: .readthedocs.yaml  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
besser/agent/core/: agent.py  file.py  message.py  property.py  session.py  state.py  transition.py
besser/agent/db/: __init__.py  monitoring_db.py
besser/agent/exceptions/: exceptions.py
besser/agent/nlp/: __init__.py  nlp_engine.py  utils.py
besser/bot/core/: Bot.py  RequestDispatcher.py  Session.py  State.py  Transition.py  bot.py  file.py  message.py  property.py  session.py  state.py  transition.py
besser/bot/cv/: __init__.py  cv_engine.py
besser/bot/db/: __init__.py  monitoring_db.py
besser/bot/exceptions/: exceptions.py
besser/bot/nlp/: NLPConfiguration.py  NLPEngine.py  __init__.py  nlp_configuration.py  nlp_engine.py  utils.py
besser/bot/server/: Payload.py  Server.py
docs/: requirements-docs.txt
docs/source/: about.rst  api.rst  conf.py  examples.rst  index.rst  release_notes.rst  wiki.rst  your_first_agent.rst  your_first_bot.rst
docs/source/about/: configuration_properties.rst  core.rst  nlp.rst  platforms.rst
docs/source/api/: any.rst  base_entities.rst  bot.rst  core.rst  datetime.rst  db.rst  entity.rst  entity_entry.rst  event_library.rst  exceptions.rst  greetings_bot.rst  intent.rst  intent_classifier_prediction.rst  intent_library.rst  intent_parameter.rst  library.rst  matched_parameter.rst  nlp.rst  nlp_configuration.rst  nlp_engine.rst  number.rst  payload.rst  pipelines.rst  platform.rst  platforms.rst  state.rst  (+12 more)
(+203 files in other folders)
