[metadata]
name = besser-bot-framework
version = 1.2.0
author = Luxembourg Institute of Science and Technology
description = BESSER Bot Framework (BBF)
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Documentation = https://besserbot-framework.readthedocs.io/
    Source Code = https://github.com/BESSER-PEARL/BESSER-Bot-Framework
    Bug Tracker = https://github.com/BESSER-PEARL/BESSER-Bot-Framework/issues
keywords = bot, framework, chatbot, state-machine, nlp
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.10
packages=find:
install_requires = file: requirements.txt
